--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <!--NAV con id propio-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
             <a class="navbar-brand" href="#arriba">
-                <span class="d-block d-lg-none">Franco Fauda</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg"/></span>
             </a>
             
@@ -39,7 +38,7 @@
         
         <div class="container-fluid p-0">
             <!-- INICIO-->
-            <section class="resume-section" id="inicio">
+            <section class="resume-section min-vh-100" id="inicio">
                 <div class="resume-section-content">
                     <h1 class="mb-4">
                         FRANCO FAUDA
@@ -48,9 +47,9 @@
                         Desarrollador Fullstack PHP | En proceso
                     </div>
                     <p class="pa mb-5">Soy un joven argentino apasionado por la tecnología. Actualmente vivo en España y estoy en busca de mi primera experiencia laboral en el mundo TIC. Mi idea es sumarme a una empresa del sector para desarrollarme profesional y personalmente</p>
-                    <div class="social-icons">
+                    <div class="social-icons row g-2">
                         <a class="social-icon linkedin" href="https://www.linkedin.com/in/francofauda/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon github" href="https://github.com/francofau target="_blank""><i class="fab fa-github"></i></a>
+                        <a class="social-icon github" href="https://github.com/francofau" target="_blank""><i class="fab fa-github"></i></a>
                         <a class="social-icon ws" href="https://api.whatsapp.com/send?phone=34644193865"_blank""><i class="fab fa-whatsapp"></i></a>                        
                         <a class="social-icon email" href="mailto:fnc_22@hotmail.com"><i class="fas fa-envelope"></i></a>
                         <a class="social-icon cv" href="https://drive.google.com/uc?id=1bd7qDCVeqApq8no3Vl8c_wvDUGk1DyJf&export=download"><i class="fas fa-address-card"></i></a>
@@ -59,7 +58,7 @@
             </section>
             <hr class="m-0" />
             <!-- EXPERIENCIA-->
-            <section class="resume-section" id="experiencia">
+            <section class="resume-section min-vh-100" id="experiencia">
                 <div class="resume-section-content">
                     <h2 class="mb-6">EXPERIENCIA</h2>
                     <!--STARTEK -->
@@ -83,7 +82,7 @@
             </section>
             <hr class="m-0" />
             <!-- FORMACIÓN      -->
-            <section class="resume-section" id="formacion">
+            <section class="resume-section min-vh-100" id="formacion">
                 <div class="resume-section-content">
                     <h2 class="mb-6">FORMACIÓN</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -121,7 +120,7 @@
             </section>
             <hr class="m-0" />
             <!-- PORTFOLIO-->
-            <section class="resume-section" id="portfolio">
+            <section class="resume-section min-vh-100" id="portfolio">
                 <div class="resume-section-content">
                     <h2 class="mb-6">PORTFOLIO</h2>
                      <div class="subtitulos mb-3">En esta sección se mostraran los proyectos desarrollados en el Bootcamp PHP/Laravel</div>                        
@@ -138,7 +137,7 @@
             </section>
             <hr class="m-0" />
             <!-- CONTACTO-->
-            <section class="resume-section" id="contacto">
+            <section class="resume-section d-none d-lg-block min-vh-100" id="contacto">
                 <div class="resume-section-content">
                     <h2 class="mt-6 mb-6">CONTACTO</h2>
                     <p>Ingrese sus datos a continuación y me comunicaré lo antes posible</p>
