--- a/index.html
+++ b/index.html
@@ -123,20 +123,30 @@
             <section class="resume-section min-vh-100" id="portfolio">
                 <div class="resume-section-content">
                     <h2 class="mb-6">PORTFOLIO</h2>
-                     <div class="subtitulos mb-3">En esta sección se mostraran los proyectos desarrollados en el Bootcamp PHP/Laravel</div>                        
-                     <div class="card" style="width: 80%;">
-                        <h5 class="card-header">Nintendo Switch</h5>     
-                        <img src="img/pfNintendoSwitch.png" class="card-img-top" alt="nSwitch">
-                        <div class="card-body">
-                            <p class="card-text">Con el diseño de esta consola portátil practiqué maquetado y posicionamiento de elementos con HTML y CSS. <br>Además con un pequeño script de JS se puede hacer click en la pantalla de la consola y la misma muestra la animación de inicio.</p>
-                            <a href="https://francofau.github.io/nintendoSwitchCSS/" target="_blank" class="btn btn-primary">Probarla!</a>
-                        </div>
-                    </div>                   
+                    <div class="subtitulos mb-3">En esta sección se mostraran los proyectos desarrollados en el Bootcamp PHP/Laravel</div>                        
+                    <div class="cards row" > 
+                        <div class="card col-12 col-sm-6">
+                            <h5 class="card-header">Nintendo Switch</h5>     
+                            <img src="img/pfNintendoSwitch.png" class="card-img-top" alt="nSwitch">
+                            <div class="card-body">
+                                <p class="card-text">Con el diseño de esta consola portátil practiqué maquetado y posicionamiento de elementos con HTML y CSS. <br>Además con un pequeño script de JS se puede hacer click en la pantalla de la consola y la misma muestra la animación de inicio.</p>
+                                <a href="https://francofau.github.io/nintendoSwitchCSS/" target="_blank" class="btn btn-primary">Probarla!</a>
+                            </div>
+                        </div>  
+                        <div class="card col-12 col-sm-6">
+                            <h5 class="card-header">Calculadora JS</h5>     
+                            <img src="img/calcJS.png" class="card-img-top" alt="calculadoraJS">
+                            <div class="card-body">
+                                <p class="card-text">Continuo practicando el posicionamiento de elementos, algunos efectos y transiciones de CSS y en este caso la funcionalidad de la calculadora se hace por medio de JavaScript. <br> Este proyecto fue desarrollado en conjunto con <a href="https://github.com/jceperuelo"  target="_blank">Jordi</a></p>
+                                <a href="https://francofau.github.io/calculadoraJS/" target="_blank" class="btn btn-primary">Probarla!</a>
+                            </div>
+                        </div>      
+                    </div> <!-- cards -->       
                 </div>
   
             </section>
             <hr class="m-0" />
-            <!-- CONTACTO-->
+            <!-- CONTACTO oculto en dispositivos móviles por el momento-->
             <section class="resume-section d-none d-lg-block min-vh-100" id="contacto">
                 <div class="resume-section-content">
                     <h2 class="mt-6 mb-6">CONTACTO</h2>
