amplio el portfolio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="#experiencia"><i class="fas fa-briefcase"></i> EXPERIENCIA</a></li>
                     <li class="nav-item"><a class="nav-link" href="#formacion"><i class="fas fa-university"></i> FORMACIÓN</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio"><i class="fas fa-code"></i> PORTFOLIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto"><i class="fas fa-pastafarianism"></i> CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto"><i class="fas fa-hand-point-right"></i> CONTACTO</a></li>
                 </ul>
             </div>
         </nav>
@@ -126,7 +126,7 @@
                     <div class="subtitulos mb-3">En esta sección se mostraran los proyectos desarrollados en el Bootcamp PHP/Laravel</div>                        
                     <div class="cards row" > 
                         <div class="card col-12 col-sm-6">
-                            <h5 class="card-header">Nintendo Switch</h5>     
+                            <h5 class="card-header text-center">Nintendo Switch</h5>     
                             <img src="img/pfNintendoSwitch.png" class="card-img-top" alt="nSwitch">
                             <div class="card-body">
                                 <p class="card-text">Con el diseño de esta consola portátil practiqué maquetado y posicionamiento de elementos con HTML y CSS. <br>Además con un pequeño script de JS se puede hacer click en la pantalla de la consola y la misma muestra la animación de inicio.</p>
@@ -134,14 +134,32 @@
                             </div>
                         </div>  
                         <div class="card col-12 col-sm-6">
-                            <h5 class="card-header">Calculadora JS</h5>     
-                            <img src="img/calcJS.png" class="card-img-top" alt="calculadoraJS">
+                            <h5 class="card-header text-center">Calculadora JS</h5>     
+                            <img src="img/calcJS.png" class="card-img-top" id="calc" alt="calculadoraJS">
                             <div class="card-body">
                                 <p class="card-text">Continuo practicando el posicionamiento de elementos, algunos efectos y transiciones de CSS y en este caso la funcionalidad de la calculadora se hace por medio de JavaScript. <br> Este proyecto fue desarrollado en conjunto con <a href="https://github.com/jceperuelo"  target="_blank">Jordi</a></p>
                                 <a href="https://francofau.github.io/calculadoraJS/" target="_blank" class="btn btn-primary">Probarla!</a>
                             </div>
                         </div>      
-                    </div> <!-- cards -->       
+                    </div> <!-- cards -->
+                     <div class="cards row mt-2" > 
+                        <div class="card col-12 col-sm-6">
+                            <h5 class="card-header text-center">TicTacToe</h5>     
+                            <img src="img/ttt.png" class="card-img-top p-3" alt="TicTacToe">
+                            <div class="card-body">
+                                <p class="card-text">También llamado tres en raya/TaTeTi, fue derrollado con Javascript. El mismo es responsive y se puede jugar Jugador Vs. Jugador o enfrentar a la IA. <br> Este proyecto fue desarrollado en conjunto con <a href="https://github.com/Aziz863"  target="_blank">Aziz</a></p>
+                                <a href="https://francofau.github.io/M4_TicTacToe/" target="_blank" class="btn btn-primary">Probarlo!</a>
+                            </div>
+                        </div>  
+                        <div class="card col-12 col-sm-6">
+                            <h5 class="card-header text-center">Carrito de Compras</h5>     
+                            <img src="img/dragDrop.png" class="card-img-top p-3" alt="Drag&DropJS">
+                            <div class="card-body">
+                                <p class="card-text">En pos de poner en práctica el diseño responsive con Boostrap y los eventos de JS, en este caso desarrollamos una clásica tienda online con las funciones de agregar al carrito mediante "Drag and Drop" además de llevar una lista parcial y total de los productos elegidos para comprar. También se utilizo el plugin de JQuery "SweetAlert" para dirigir mensajes al usuario mas agradables, reemplazando así el clásico "alert" <br> Desarrollado junto con <a href="https://github.com/katakvri"  target="_blank">Martin</a></p>
+                                <a href="https://francofau.github.io/tiendaDragDrop/" target="_blank" class="btn btn-primary">Probarla!</a>
+                            </div>
+                        </div>      
+                    </div>       
                 </div>
   
             </section>
