--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         FRANCO FAUDA
                     </h1>
                     <div class="subtitulos mb-5">
-                        Desarrollador Fullstack PHP | En proceso
+                        Desarrollador PHP | En proceso
                     </div>
                     <p class="pa mb-5">Soy un joven argentino apasionado por la tecnología. Actualmente vivo en España y estoy en busca de mi primera experiencia laboral en el mundo TIC. Mi idea es sumarme a una empresa del sector para desarrollarme profesional y personalmente</p>
                     <div class="social-icons row g-2">
