--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Desarrollador Laravel |
                         Analista de Sistemas
                     </div>
-                    <p class="pa mb-5">Actualmente resido en España y estoy en busca de una nueva experiencia laboral y sumarme a una empresa del sector TIC/IT para continuar mi desarrollo profesional y personal</p>
+                    <p class="pa mb-5">Actualmente resido en España, estoy en busca de una nueva experiencia laboral para sumarme a una empresa del sector TIC/IT y continuar mi desarrollo profesional y personal</p>
                     <div class="social-icons row g-2">
                         <a class="social-icon linkedin" href="https://www.linkedin.com/in/francofauda/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon github" href="https://github.com/francofau" target="_blank""><i class="fab fa-github"></i></a>
